# JasNote

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  README_zh.md  config.json  settings.md
qml/: Editor.qml
src/: config.cpp  glassdialog.cpp  glassdialog.h  litehtmlcontainer.cpp  litehtmlcontainer.h  litehtmleditor.cpp  litehtmleditor.h  litehtmlwidget.cpp  litehtmlwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  markdownconverter.cpp  markdownconverter.h  markdowneditor.cpp  markdowneditor.h  settings.h  titlebar.cpp  titlebar.h
tests/: test_mainwindow.cpp
